Update Docker base image to Ubuntu 18.04
Update to OpenJDK 11